:recycle: Room, Quiz 리팩토링