@@ -5,7 +5,6 @@ import com.danaleeband.guessit.controller.dto.QuizResponseDto;
 import com.danaleeband.guessit.entity.Quiz;
 import com.danaleeband.guessit.repository.QuizRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -51,8 +50,8 @@ public class QuizService {
         quizRepository.save(quiz);
     }
 
-    public List<Long> getRandomQuizzes(int limit) {
-        List<Quiz> quizzes = quizRepository.findTop10ByOrderByRandom(); // 적절한 메소드 사용
-        return quizzes.stream().map(Quiz::getId).collect(Collectors.toList());
+    public List<Long> getRandomQuizzes() {
+        List<Quiz> quizzes = quizRepository.findTop10ByOrderByRandom();
+        return quizzes.stream().map(Quiz::getId).toList();
     }
 }
